Add h1, h2 and the form element to the page

--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>	
 <body>
+	<h1>Bookmark It!</h1>
+	<h2>Bookmark Your Favorite Sites</h2>
+	<form>
+		<div>
+			<label for="site-name"><abbr title="required">*</abbr>Site Name</label>
+			<input type="text" id="site-name" name="site-name" required>
+		</div>
+		<div>
+			<label for="site-url"><abbr title="required">*</abbr>Site URL</label>
+			<input type="url" id="site-url" name="site-url" required>
+		</div>
+		<div>
+    		<input type="submit" value="Add">
+  		</div>
+	</form>
 </body>
 </html>
