Add some basic structure and styling elements

--- a/index.html
+++ b/index.html
@@ -8,20 +8,29 @@
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>	
 <body>
-	<h1>Bookmark It!</h1>
-	<h2>Bookmark Your Favorite Sites</h2>
-	<form>
-		<div>
-			<label for="site-name"><abbr title="required">*</abbr>Site Name</label>
-			<input type="text" id="site-name" name="site-name" required>
-		</div>
-		<div>
-			<label for="site-url"><abbr title="required">*</abbr>Site URL</label>
-			<input type="url" id="site-url" name="site-url" required>
-		</div>
-		<div>
-    		<input type="submit" value="Add">
-  		</div>
-	</form>
+	<div class="content">
+		<header>
+			<div class="logo">
+				<img src="https://image.ibb.co/j3wCmz/Ativo_1clip.png"/>
+			</div>
+			<div>
+				<h1>Bookmark It!</h1>
+				<h2>Bookmark Your Favorite Sites</h2>
+			</div>
+		</header>
+		<form>
+			<div>
+				<label for="site-name"><abbr title="required">*</abbr>Site Name</label>
+				<input type="text" id="site-name" name="site-name" required>
+			</div>
+			<div>
+				<label for="site-url"><abbr title="required">*</abbr>Site URL</label>
+				<input type="url" id="site-url" name="site-url" required>
+			</div>
+			<div>
+	    		<input type="submit" value="Add">
+	  		</div>
+		</form>
+	</div>
 </body>
 </html>
